[package]
name = "esp8266-nonos-sdk"
version = "0.1.0"
edition = "2021"
description = "esp8266-nonos-sdk bindings for rust"
authors = ["Nearest River river177169@proton.me"]
license = "GPL-2.0-only"
repository = "https://github.com/nearest-river/esp8266-nonos-sdk"
keywords = ["esp8266", "embedded", "esp"]
categories = ["embedded"]


[dependencies]
xtensa-lx-rt = { version = "0.16.0", features = ["esp8266"] }
xtensa-lx = { version = "0.7.0", features = ["esp8266"] }
esp8266-hal = { version = "0.5.0" }
esp8266 = "0.6.0"
embedded-hal = { version = "0.2.4", features = ["unproven"] }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[build-dependencies.bindgen]
version = "0.71.1"
features = ["experimental", "which-rustfmt", "__testing_only_libclang_16"]

